clang/test/BSC/Negative/Ownership/Borrow/borrow_cast_raw_pointer/borrow_cast_raw_pointer.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test() {
  int a = 1;
  int b = 1;
  // T * --> T * _Borrow
  int *p = &a;
  int * _Borrow p1 = (int * _Borrow)&a; // legal
  const int * _Borrow p2 = (const int * _Borrow)&a; // legal
  p1 = (int * _Borrow)&a; // legal
  p2 = (const int * _Borrow)&a; // legal
  p1 = p; // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'int *_Borrow'}}
  p = p1; // expected-error {{incompatible _Borrow types, cannot cast 'int *_Borrow' to 'int *'}}
  p1 = p2; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
  p2 = p1; // allow re-borrowing

  // T * _Borrow --> T *
  int * p3 = (int *)&_Mut a; // legal
  const int * p4 = (const int *)&_Const a; // legal
  p3 = (int *)&_Mut a; // legal
  p4 = (const int *)&_Const a; // legal

  _Safe {
    // T * --> T * _Borrow
    int * _Borrow p1 = (int * _Borrow)p; // expected-error {{conversion from type 'int *' to 'int *_Borrow' is forbidden in the safe zone}}
    const int * _Borrow p2 = (const int * _Borrow)p; // expected-error {{conversion from type 'int *' to 'const int *_Borrow' is forbidden in the safe zone}}
    p1 = (int * _Borrow)p; // expected-error {{conversion from type 'int *' to 'int *_Borrow' is forbidden in the safe zone}}
    p2 = (const int * _Borrow)p; // expected-error {{conversion from type 'int *' to 'const int *_Borrow' is forbidden in the safe zone}}

    // T * _Borrow --> T *
    int * p3 = (int *)&_Mut a; // expected-error {{conversion from type 'int *_Borrow' to 'int *' is forbidden in the safe zone}}
    const int * p4 = (const int *)&_Const a; // expected-error {{conversion from type 'const int *_Borrow' to 'const int *' is forbidden in the safe zone}}
    p3 = (int *)&_Mut a; // expected-error {{conversion from type 'int *_Borrow' to 'int *' is forbidden in the safe zone}}
    p4 = (const int *)&_Const a; // expected-error {{conversion from type 'const int *_Borrow' to 'const int *' is forbidden in the safe zone}}
  }
}